<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="about_update_progress">Updating RainMachine firmware…\nDo not unplug RainMachine!</string>
    <string name="about_app_version">Android app</string>
    <string name="about_rain_machine_version">RainMachine firmware</string>
    <string name="about_hardware_version">Hardware</string>
    <string name="about_version_update">v%1$s (new: v%2$s)</string>
    <string name="about_api_version">API</string>
    <string name="about_ip_address">IP address</string>
    <string name="about_netmask">Netmask</string>
    <string name="about_gateway">Gateway</string>
    <string name="about_mac_address">MAC address</string>
    <string name="about_ssid_name">WiFi SSID</string>
    <string name="about_mem_usage">Memory usage</string>
    <string name="about_kb">%1$d KB</string>
    <string name="about_cpu_usage">CPU usage</string>
    <string name="about_uptime">Uptime</string>
    <string name="about_none_lower_case">none</string>
    <string name="about_send_diagnostics">Send Diagnostics</string>
    <string name="about_error_send_diagnostics">Error sending the diagnostics</string>
    <string name="about_success_send_diagnostics">Success sending the diagnostics</string>
    <string name="about_remote_access_status">Remote access status</string>
    <string name="about_rainmachine_online">RainMachine is online</string>
    <string name="about_remote_access_disabled">disabled</string>
    <string name="about_rainmachine_offline">RainMachine is offline (error code %1$d)</string>
    <string name="about_are_you_sure_reset_cloud_certificates">Are you sure you want to reset the remote access functionality?</string>
    <string name="about_success_reset_cloud_certificates">Successfully reset remote access functionality</string>
    <string name="about_error_reset_cloud_certificates">Failure resetting remote access functionality</string>
    <string name="current_restrictions_rain_detected">Rain detected</string>
    <string name="current_restrictions_paused">Paused</string>
    <string name="current_restrictions_for_resume">&#160;and will resume normal operation after the rain has stopped</string>
    <string name="current_restrictions_for_one_day">&#160;and will resume after midnight if the rain has stopped by then</string>
    <string name="current_restrictions_for_6">&#160;and will resume after 6 hours since the rain has stopped</string>
    <string name="current_restrictions_for_12">&#160;and will resume after 12 hours since the rain has stopped</string>
    <string name="current_restrictions_for_24">&#160;and will resume after 24 hours since the rain has stopped</string>
    <string name="current_restrictions_for_48">&#160;and will resume after 48 hours since the rain has stopped</string>
    <string name="current_restrictions_for_x_minutes">&#160;for %1$d minutes</string>
    <string name="current_restrictions_freeze_protect_under">Freeze protect under %1$d%2$s</string>
    <string name="current_restrictions_month_day">%1$s restriction</string>
    <string name="current_restrictions_hourly_from_to">Hourly from %1$s to %2$s</string>
    <string name="current_restrictions_hourly">hourly</string>
    <string name="current_restrictions_subtitle">Current restrictions</string>
    <string name="current_restrictions_rainmachine_is">RainMachine is&#160;</string>
    <string name="advanced_settings_ssh_access">SSH Access</string>
    <string name="advanced_settings_beta_updates">Beta Quality Updates</string>
    <string name="advanced_settings_amazon_alexa">Amazon Echo Alexa Integration</string>
    <string name="advanced_settings_amazon_alexa_subtitle">Allow local LAN integration with Amazon Alexa.</string>
    <string name="advanced_settings_beta_updates_subtitle">Allow to receive beta updates which are more often, but not thoroughly tested (use this at your own risk).</string>
    <string name="advanced_settings_log_level">Log Level</string>
    <string name="advanced_settings_log_debug">Debug</string>
    <string name="advanced_settings_log_normal">Normal</string>
    <string name="advanced_settings_log_warnings">Only Warnings / Errors</string>
    <string name="advanced_settings_bonjour_service">Bonjour Service</string>
    <string name="advanced_settings_bonjour_subtitle">Allow mDNS discovery</string>
    <string name="advanced_settings_left_hand">Left Hand</string>
    <string name="advanced_settings_right_hand">Right Hand</string>
    <string name="cloud_accounts_account">Account</string>
    <string name="cloud_accounts_are_you_sure_delete_cloud">Are you sure you want to delete this account?</string>
    <string name="cloud_accounts_error_email_invalid">Invalid email</string>
    <string name="cloud_accounts_add_account">Add account</string>
    <string name="cloud_accounts_email">E-mail address</string>
    <string name="cloud_accounts_rain_machine_password">RainMachine password</string>
    <string name="cloud_accounts_added">Successfully added account</string>
    <string name="cloud_accounts_updated">Successfully updated account</string>
    <string name="cloud_accounts_error">Error</string>
    <string name="cloud_accounts_duplicate_email">This email already exists in your account list.</string>
    <string name="cloud_accounts_no_devices">Could not find any RainMachine devices associated to %1$s. Check that the email address is correct, and that the verification email has been confirmed.</string>
    <string name="cloud_accounts_not_connected">The RainMachine associated to %1$s is not connected to the Internet.</string>
    <string name="cloud_accounts_invalid_password">Invalid password, please try again.</string>
    <string name="cloud_accounts_server_problem">There was a network problem. Make sure you have Internet connectivity.</string>
    <string name="cloud_accounts_help">This information is necessary for remotely accessing your RainMachine.</string>
    <string name="crop_title">Crop image</string>
    <string name="devices_no_rain_machines_found">No RainMachines found.</string>
    <string name="devices_setup">setup</string>
    <string name="devices_offline">offline</string>
    <string name="devices_remote_access">Remote Access</string>
    <string name="direct_access_device">Device</string>
    <string name="direct_access_are_you_sure_delete_manual_device">Are you sure you want to delete this device?</string>
    <string name="direct_access_url_example">Example: 1.1.1.200:443</string>
    <string name="direct_access_name">Name</string>
    <string name="direct_access_url_or_ip">URL or IP address</string>
    <string name="direct_access_device_added">Successfully added manual device</string>
    <string name="direct_access_add_device">Add device</string>
    <string name="direct_access_help">Optional: Needed only for advanced networking configurations.\nThis option is not needed for configuring remote access.</string>
    <string name="drawer_view_all_devices">View all devices</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="help_software_updates">Software Updates</string>
    <string name="help_online_manuals">Online Manuals</string>
    <string name="help_contact">Contact</string>
    <string name="help_using_the_app">Using the App</string>
    <string name="help_forums">Forums</string>
    <string name="hidden_drawer_logs">Logs</string>
    <string name="hidden_drawer_show_logs">Show logs</string>
    <string name="hidden_drawer_cloud">Cloud</string>
    <string name="hidden_drawer_device_cache">Device cache</string>
    <string name="hidden_drawer_sprinkler">Sprinkler</string>
    <string name="hidden_drawer_spk2_behavior">SPK2 behavior</string>
    <string name="hidden_drawer_spk1_api">SPK1 3.72 API</string>
    <string name="hidden_drawer_push">Push</string>
    <string name="hidden_drawer_notification">Notification</string>
    <string name="hidden_drawer_send_push">Send push</string>
    <string name="hidden_drawer_scan">Scan</string>
    <string name="hidden_drawer_urls">URLs</string>
    <string name="hidden_drawer_logging">Logging</string>
    <string name="hidden_drawer_add">Add</string>
    <string name="hidden_drawer_edit">Edit</string>
    <string name="hidden_drawer_add_cloud_servers">Add cloud servers</string>
    <string name="hidden_drawer_edit_cloud_servers">Edit cloud servers</string>
    <string name="hidden_drawer_label">Label</string>
    <string name="hidden_drawer_proxy">Proxy</string>
    <string name="hidden_drawer_validator">Validator</string>
    <string name="hours_help">Do not water on specified hours.\nPrograms will be paused during restricted hours and will be resumed after restriction.</string>
    <string name="hours_add_restriction">Add New Restriction</string>
    <string name="hours_select_restrictions">Delete restrictions</string>
    <plurals name="hours_restrictions_deleted">
        <item quantity="one">1 restriction deleted</item>
        <item quantity="other">%1$d restrictions deleted</item>
    </plurals>
    <plurals name="hours_restrictions_selected">
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="location_edit">Edit</string>
    <string name="location_success_set">Successfully saved location</string>
    <string name="location_error_set">Unable to save location</string>
    <string name="location_enter_address_manually">Enter address manually</string>
    <string name="location_enter_address">Enter location address</string>
    <string name="offline_description">RainMachine is OFFLINE\n\nThis may be because:\n- there was an electrical outage,\n- the RainMachine device is unplugged,\n- Wi-Fi connection on the device is bad or is off</string>
    <string name="offline_forget">Forget this device</string>
    <string name="offline_no_longer">If you no longer wish to view this RainMachine device in your list</string>
    <string name="program_details_copy">Copy to New Program</string>
    <string name="programs_activate">Activate</string>
    <string name="wifi_password">Wi-Fi password</string>
    <string-array name="wifi_security">
        <item>@string/all</item>
        <item>WEP</item>
        <item>WPA</item>
        <item>WPA2</item>
    </string-array>
    <string-array name="wifi_ip_settings">
        <item>DHCP</item>
        <item>Static</item>
    </string-array>
    <string name="wifi_title_ip_address">IP address</string>
    <string name="wifi_hint_ip_address">192.168.1.128</string>
    <string name="wifi_title_netmask">Netmask</string>
    <string name="wifi_hint_netmask">255.255.255.0</string>
    <string name="wifi_title_gateway">Gateway</string>
    <string name="wifi_hint_gateway">192.168.1.1</string>
    <string name="wifi_title_dns">DNS</string>
    <string name="wifi_hint_dns">8.8.8.8</string>
    <string name="wifi_network_ssid">Network SSID</string>
    <string name="wifi_enter_ssid">Enter the SSID</string>
    <string name="wifi_advanced_options">Show advanced options</string>
    <string name="wifi_enter_password">Enter the password</string>
    <string name="wifi_settings_type_password">Please make sure you are typing the correct Wi-Fi password. Thank you.</string>
    <string name="all_delete">Delete</string>
    <string name="all_password">Password</string>
    <string name="all_save">Save</string>
    <string name="all_old_password">Old password</string>
    <string name="all_new_password">New password</string>
    <string name="all_confirm_password">Confirm password</string>
    <string name="all_show_password">Show password</string>
    <string name="all_device_name">Device Name</string>
    <string name="all_edit">Edit</string>
    <string name="all_set_password">Please set up your RainMachine password. It is required to access your device locally or remotely.</string>
</resources>