<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_padding">

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wifi_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/check_show_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/all_show_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.0"
        android:paddingBottom="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_medium"
        android:text="@string/wifi_settings_type_password"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_medium" />
</LinearLayout>