<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_padding">

    <EditText
        android:id="@+id/input_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/all_old_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:textSize="@dimen/text_larger" />

    <EditText
        android:id="@+id/input_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/all_new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:textSize="@dimen/text_larger" />

    <EditText
        android:id="@+id/input_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/all_confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textSize="@dimen/text_larger" />
</LinearLayout>