<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    tools:ignore="UselessParent">

    <TextView
        style="@style/Widget.DebugDrawer.Base.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hidden_drawer_push" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Widget.DebugDrawer.Base.RowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hidden_drawer_notification" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_send_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/hidden_drawer_send_push"
        android:textAllCaps="true" />
</LinearLayout>